--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body class="inter-font">
-    <header>
+    <header class="mb-16 sm:mb-[120px]">
       <div class="container">
         <nav
           class="navbar flex justify-between items-center mx-4 mb-7 mt-3 sm:mb-[120px] sm:mt-7"
@@ -54,7 +54,9 @@
               >
             </h1>
 
-            <p class="banner-description font-primary text-sm sm:text-[22px]">
+            <p
+              class="banner-description font-primary text-sm sm:text-[22px] sm:mb-12"
+            >
               Indulge your senses with the beauty and fragrance of our fresh
               flower shop. From classic roses to exotic blooms, we offer a wide
               variety of fresh flowers that are perfect for any occasion.
@@ -69,5 +71,102 @@
         />
       </section>
     </header>
+
+    <section class="our-plants container">
+      <h1 class="text-2xl font-bold text-center mb-4 sm:text-5xl">
+        <span class="orange-title">Our</span> Plants
+      </h1>
+      <p class="font-primary text-sm mx-7 text-center mb-7 sm:text-[22px]">
+        Indulge your senses with the beauty and fragrance of our fresh flower
+        shop. From classic roses to exotic blooms, we offer a wide variety of
+        fresh.
+      </p>
+      <div
+        class="grid grid-cols-2 gap-y-7 gap-x-4 mx-3 mb-10 sm:grid-cols-4 sm:mb-52"
+      >
+        <div class="card flex flex-col items-center text-center">
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+        <div class="card flex flex-col items-center text-center">
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+        <div class="card flex flex-col items-center text-center">
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+        <div class="card flex flex-col items-center text-center">
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+        <div class="card flex flex-col items-center text-center">
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+        <div class="card flex flex-col items-center text-center">
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+        <div
+          class="card flex flex-col items-center text-center hidden sm:block"
+        >
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+        <div class="card flex flex-col items-center text-cente hidden sm:block">
+          <img
+            class="w-[171px] mb-7 sm:w-[270px]"
+            src="./assets/sample-flower-image.png"
+            alt=""
+          />
+          <p class="font-medium sm:text-[22px]">Lily Blossom</p>
+          <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
+          <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
