--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
       <section class="banner flex flex-col-reverse container sm:flex-row">
         <div class="banner-content flex items-end mx-4">
           <div>
-            <h1
-              class="banner-title text-2xl font-bold noto-serif-font mb-3 sm:text-6xl"
-            >
+            <h1 class="banner-title text-2xl noto-serif-font mb-3 sm:text-6xl">
               ALWAYS
               <span class="orange-title"
                 >FRESH <br />
@@ -73,7 +71,7 @@
     </header>
 
     <section class="our-plants container">
-      <h1 class="text-2xl font-bold text-center mb-4 sm:text-5xl">
+      <h1 class="noto-serif-font text-2xl text-center mb-4 sm:text-5xl">
         <span class="orange-title">Our</span> Plants
       </h1>
       <p class="font-primary text-sm mx-7 text-center mb-7 sm:text-[22px]">
@@ -165,6 +163,73 @@
           <p class="font-medium sm:text-[22px]">Lily Blossom</p>
           <p class="font-bold mb-7.5 sm:text-[22px]">20 USD</p>
           <button class="primary-btn sm:w-full">ADD TO CART</button>
+        </div>
+      </div>
+    </section>
+
+    <section class="latest-deals container">
+      <h1 class="text-2xl text-center mb-4 noto-serif-font sm:text-5xl">
+        <span class="orange-title">Latest </span>Deals
+      </h1>
+      <p
+        class="font-primary text-sm text-center mb-12 mx-7 sm:text-[22px] sm:mb-[120px]"
+      >
+        Indulge your senses with the beauty and fragrance of our fresh flower
+        shop. From classic roses to exotic blooms, we offer a wide variety of
+        fresh.
+      </p>
+
+      <div
+        class="grid grid-cols-1 mx-4 mb-10 sm:grid-cols-[1fr_2fr] gap-5 sm:mb-[120px]"
+      >
+        <div class="flex flex-col gap-5">
+          <div class="relative rounded-2xl overflow-hidden">
+            <img
+              src="./assets/deal-bloom.png"
+              alt="Bloom Plant"
+              class="w-full h-full object-cover"
+            />
+            <div
+              class="absolute inset-0 flex flex-col justify-center items-center text-white bg-black/40"
+            >
+              <h5 class="text-xl font-bold noto-serif-font mb-2">
+                60% Off | Bloom Plant
+              </h5>
+              <a href="#" class="underline">Shop Now</a>
+            </div>
+          </div>
+
+          <div class="relative rounded-2xl overflow-hidden">
+            <img
+              src="./assets/deal-ana.png"
+              alt="Ana Plant"
+              class="w-full h-full object-cover"
+            />
+            <div
+              class="absolute inset-0 flex flex-col justify-center items-center text-white bg-black/40"
+            >
+              <h5 class="text-xl font-bold noto-serif-font mb-2">
+                30% Off | Ana Plant
+              </h5>
+              <a href="#" class="underline">Shop Now</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="relative rounded-2xl overflow-hidden">
+          <img
+            src="./assets/deal-zabo.png"
+            alt="Zabo Plant"
+            class="w-full h-full object-cover"
+          />
+          <div
+            class="absolute inset-0 flex flex-col justify-center items-center text-white bg-black/40"
+          >
+            <h5 class="text-xl font-bold noto-serif-font mb-4 sm:text-3xl">
+              25% Off | Zabo Plant
+            </h5>
+            <a href="#" class="underline sm:text-lg">Shop Now</a>
+          </div>
         </div>
       </div>
     </section>
