--- a/index.html
+++ b/index.html
@@ -233,5 +233,23 @@
         </div>
       </div>
     </section>
+
+    <section
+      class="colorful-bunch flex flex-col justify-center items-center gap-6 bg-[url('./assets/news-letter-bg.png')] bg-cover bg-center h-[275px] w-full sm:h-[533px] mb-12"
+    >
+      <h1 class="noto-serif-font text-white text-xl sm:text-5xl">
+        Join the colorful Bunch
+      </h1>
+      <div class="flex">
+        <input
+          class="bg-white py-4 ps-5 sm:w-[644px]"
+          placeholder="Write Email"
+          type="email"
+          name=""
+          id=""
+        />
+        <button class="primary-btn !px-3 !py-4 sm:!px-[53px]">Subscribe</button>
+      </div>
+    </section>
   </body>
 </html>
