footer section done

--- a/index.html
+++ b/index.html
@@ -251,5 +251,39 @@
         <button class="primary-btn !px-3 !py-4 sm:!px-[53px]">Subscribe</button>
       </div>
     </section>
+
+    <footer class="container">
+      <div class="mx-4 mb-12 sm:grid grid-cols-3 gap-28">
+        <div>
+          <img class="mb-4" src="./assets/logo.png" alt="" />
+          <p class="font-primary mb-5 sm:text-[22px]">
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop.
+          </p>
+        </div>
+
+        <div>
+          <ul class="font-primary flex flex-col gap-8 mb-5 sm:grid grid-cols-2">
+            <li>Home</li>
+            <li>About Us</li>
+            <li>Blog</li>
+            <li>FAQ</li>
+            <li>Contact Us</li>
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>Privacy Policy</li>
+            <li>Terms of Service</li>
+            <li>Help Center</li>
+          </ul>
+        </div>
+
+        <div class="footer-image flex gap-6 sm:justify-end">
+          <img class="sm:w-9 h-9" src="./assets/icon-linkedin.png" alt="" />
+          <img class="sm:w-9 h-9" src="./assets/icon-twitter.png" alt="" />
+          <img class="sm:w-9 h-9" src="./assets/icon-facebook.png" alt="" />
+          <img class="sm:w-9 h-9" src="./assets/icon-youtube.png" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
