plant lover section done

--- a/index.html
+++ b/index.html
@@ -167,6 +167,50 @@
       </div>
     </section>
 
+    <section class="flower-and-plant-lover container">
+      <div class="flex flex-col gap-4.5 mx-4 mb-32 sm:flex-row sm:gap-[60px]">
+        <div class="flower-lover-image sm:w-1/2 relative">
+          <img src="./assets/flower-store.png" alt="" />
+          <img
+            class="hidden sm:block absolute top-[-115px] right-[-95px] w-72"
+            src="./assets/trusted-badge.png"
+            alt=""
+          />
+        </div>
+
+        <div
+          class="flower-lover-content sm:w-1/2 sm:flex flex-col justify-center"
+        >
+          <h1 class="noto-serif-font text-2xl mb-4 sm:text-6xl sm:mb-6">
+            Flower & Plants Lover
+          </h1>
+          <ul class="list-disc ms-4">
+            <li class="font-primary text-sm mb-4 sm:text-[22px] sm:mb-5">
+              <p>
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </p>
+            </li>
+            <li class="font-primary text-sm mb-4 sm:text-[22px] sm:mb-5">
+              <p>
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </p>
+            </li>
+            <li class="font-primary text-sm mb-4 sm:text-[22px] sm:mb-5">
+              <p>
+                Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From classic roses to exotic blooms, we offer a
+                wide variety of fresh.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
     <section class="latest-deals container">
       <h1 class="text-2xl text-center mb-4 noto-serif-font sm:text-5xl">
         <span class="orange-title">Latest </span>Deals
